--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
+  "main": "src/electron.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "electron ."
   },
+  "homepage": "./",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -30,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^8.0.1"
   }
 }
